--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         
     </head>
     <body>
-        <h1>jake Muilenburg's N220 Projects</h1>
+        <h1>Jake Muilenburg's N220 Projects</h1>
     </body>
 </html>
