--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Jake Muilenburg's N220 Projects</h1>
-        <a src="index.html"></a>
+        <a src="Labs/Lab 0/base.html">Lab 0</a>
     </body>
 </html>
