--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <body>
         <h1>Jake Muilenburg's N220 Projects</h1>
         <a href="Labs/Lab 0/base.html">Lab 0</a>
+        <a href="Labs/Personal Composition/">Personal Compositon</a>
+
     </body>
 </html>
