--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     </head>
     <body>
         <h1>Jake Muilenburg's N220 Projects</h1>
-        <a href="Labs/Lab 0/base.html">Lab 0</a>
-        <a href="Labs/Personal Composition/">Personal Compositon</a>
+        <a href="Labs/Lab 0/base.html"><h2>Lab 0</h2></a>
+    
+        <a href="Labs/Personal Composition/base.html"><h2>Personal Compositon</h2></a>
 
     </body>
 </html>
