Added links to Index

--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
     
         <a href="Labs/Personal Composition/base.html"><h2>Personal Compositon</h2></a>
 
+        <a href="Labs/Animaton-Conditional Project/PuckSlide/base.html"><h2>PuckSlide</h2></a>
+        
+        <a href="Labs/Animaton-Conditional Project/EverLarger/base.html"><h2>Ever Larger</h2></a>
+
+        <a href="Labs/Animaton-Conditional Project/WorldWarp/base.html"><h2>World Warp</h2></a>
+
+
+
+
     </body>
 </html>
