--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
 
         <a href="Labs/Animaton-Conditional Project/WorldWarp/base.html"><h2>World Warp</h2></a>
 
+        <a href="Labs/Functions/DrawingDrawer/base.html"><h2>Drawing Drawer</h2></a>
+
+        <a href="Labs/Functions/RedRemover/base.html"><h2>Red Remover</h2></a>
+
+        <a href="Labs/Functions/PolarPoints/base.html"><h2>Polar Points</h2></a>
     </body>
 </html>
