Index Links added

--- a/index.html
+++ b/index.html
@@ -9,16 +9,30 @@
     
         <a href="Labs/Personal Composition/base.html"><h2>Personal Compositon</h2></a>
 
+        <h2>Animation and Conditional Operators Exercises</h2>
+
         <a href="Labs/Animaton-Conditional Project/PuckSlide/base.html"><h2>PuckSlide</h2></a>
         
         <a href="Labs/Animaton-Conditional Project/EverLarger/base.html"><h2>Ever Larger</h2></a>
 
         <a href="Labs/Animaton-Conditional Project/WorldWarp/base.html"><h2>World Warp</h2></a>
 
+        <h2>Functions Exercises 1</h2>
+
         <a href="Labs/Functions/DrawingDrawer/base.html"><h2>Drawing Drawer</h2></a>
 
         <a href="Labs/Functions/RedRemover/base.html"><h2>Red Remover</h2></a>
 
         <a href="Labs/Functions/PolarPoints/base.html"><h2>Polar Points</h2></a>
+
+        <h2>Object Exercises</h2>
+
+        <a href="Labs/Objects/DataDrivenDisplay/base.html"><h2>Data Driven Display</h2></a>
+
+        <a href="Labs/Objects/ReverseTennis/base.html"><h2>Reverse Tennis</h2></a>
+
+        <a href="Labs/Objects/WordWarpRefract/base.html"><h2>World Warp Refract</h2></a>
+
+
     </body>
 </html>
