--- a/Labs/Document Object Manipulation/Over and Out/base.html
+++ b/Labs/Document Object Manipulation/Over and Out/base.html
@@ -1,8 +1,19 @@
 <html>
-    <head></head>
+    <head>
+        <style>
+            #square {
+                width: 100px;
+                height: 100px;
+                
+            }
+        
+        </style>
+
+    </head>
     <body>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.min.js" integrity="sha512-WJXVjqeINVpi5XXJ2jn0BSCfp0y80IKrYh731gLRnkAS9TKc5KNt/OfLtu+fCueqdWniouJ1ubM+VI/hbo7POQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+        <div id="square"></div>
         <script src="app.js"></script>
     </body>
 </html>
