--- a/Labs/Document Object Manipulation/Peak Pixels/base.html
+++ b/Labs/Document Object Manipulation/Peak Pixels/base.html
@@ -1,10 +1,17 @@
 <html>
-    <head></head>
+    <head>
+<style>
+    #square {
+        background-color: #00FF00;
+    }
+
+</style>
+
+    </head>
     <body>
 
         
-    <div id="square">
-    </div>
+    <div id="square"></div>
         <script src="app.js"></script>
     </body>
 </html>
