Loops and Arrays

--- a/Labs/Loops-Arrays/Favorray/base.html
+++ b/Labs/Loops-Arrays/Favorray/base.html
@@ -2,7 +2,7 @@
     <head></head>
     <body>
 
-      
+        <div id="myFavs"></div>
         <script src="js/app.js"></script>
     </body>
 </html>
