--- a/Labs/Loops-Arrays/RunnerUp/base.html
+++ b/Labs/Loops-Arrays/RunnerUp/base.html
@@ -1,8 +1,9 @@
 <html>
     <head></head>
     <body>
-
-      
+    <h2>Runner Up Times</h2>
+        <div id="second"></div>
+        <div id="third"></div>
         <script src="js/app.js"></script>
     </body>
 </html>
