--- a/Labs/Midterm-Review/UI-Nav/base.html
+++ b/Labs/Midterm-Review/UI-Nav/base.html
@@ -1,7 +1,16 @@
 <html>
     <head></head>
     <body>
-   
+        
+        <div id="selected">Selected</div>
+
+        <div class="nav" onClick="selected1('1')">Mammal</div>
+        <div class="nav" onClick="selected2('2')">Bird</div>
+        <div class="nav" onClick="selected3('3')">Fish</div>
+        <div class="nav" onClick="selected4('4')">Reptile</div>
+        <div class="nav" onClick="selected5('5')">Amphibian</div>
+        <div class="nav" onClick="selected6('6')">Insect</div>
+
         <script src="js/app.js"></script>
     </body>
 </html>
