--- a/Labs/Midterm-Review/RPS-Guard/base.html
+++ b/Labs/Midterm-Review/RPS-Guard/base.html
@@ -1,6 +1,18 @@
 <html>
     <head></head>
     <body>
+        <h3>Score</h3>
+        <div id="score">0</div>
+        <br>
+        <h3>Choices</h3>
+        <div onClick="roll('Rock')">Rock</div>
+        <div onClick="roll('Paper')">Paper</div>
+        <div onClick="roll('Scissor')">Scissor</div>
+        <div onClick="guard()">Guard</div>
+        <h3>Results</h3>
+        <div id="results"></div>
+
+
 
         <script src="js/app.js"></script>
     </body>
