--- a/Labs/User-Inputs/greeter/base.html
+++ b/Labs/User-Inputs/greeter/base.html
@@ -1,7 +1,8 @@
 <head></head>
 <body>
-    
-
+    <h2>Enter Name Below</h2>
+        <input id="nameInput">
+        <button onclick="nameAdd()">Click Here</button>
     <script src="js/app.js"></script>
 </body>
 </html>
