--- a/Labs/Functions.p2/Cleanup/base.html
+++ b/Labs/Functions.p2/Cleanup/base.html
@@ -1,7 +1,9 @@
 <html>
     <head></head>
     <body>
-     
+     <input id="inputTxt">
+     <button onclick="clean()">Clean</button>
+     <div id="result"></div>
         <script src="app.js"></script>
     </body>
 </html>
