--- a/Labs/Functions.p2/divBy7/base.html
+++ b/Labs/Functions.p2/divBy7/base.html
@@ -1,7 +1,10 @@
 <html>
     <head></head>
     <body>
-     
+    <h2>Divisible by 7 Calculator</h2>
+     <input id="number">
+     <button onclick="divs()">Check</button>
+     <div id="result"></div>
         <script src="app.js"></script>
     </body>
 </html>
