--- a/Labs/Functions.p2/makeRand/base.html
+++ b/Labs/Functions.p2/makeRand/base.html
@@ -1,7 +1,8 @@
 <html>
     <head></head>
     <body>
-     
+     <button onclick="randomGen()">Random Number</button>
+     <div id="result"></div>
         <script src="app.js"></script>
     </body>
 </html>
