--- a/Labs/Array Computation/BadWord/base.html
+++ b/Labs/Array Computation/BadWord/base.html
@@ -1,6 +1,13 @@
 <html>
     <head></head>
     <body>
+        <h3> Bad Word Detector</h3>
+        <input id="input" placeholder="Input Phrase">
+        <button onclick = "search()">Find</button>
+        <br>
+        <br>
+        <div id="ans"></div>
+       
 
         <script src="js/app.js"></script>
     </body>
