--- a/Labs/Array Computation/Average/base.html
+++ b/Labs/Array Computation/Average/base.html
@@ -1,6 +1,15 @@
 <html>
     <head></head>
     <body>
+        <h2> Find Sum and Average </h2>
+        <h4> Input a Comma Seperated List of Numbers </h4>
+        <h5>Ex(4,6,3,4,1,5)</h5>
+        <input id="input" placeholder="Input Numbers">
+        <button onclick = "calc()">Calculate</button>
+        <br>
+        <br>
+        <div id="sum"></div>
+        <div id="avg"></div>
 
         <script src="js/app.js"></script>
     </body>
