--- a/Labs/Array Computation/Check Win/base.html
+++ b/Labs/Array Computation/Check Win/base.html
@@ -1,7 +1,11 @@
 <html>
     <head></head>
     <body>
-
+        <input id="input" placeholder="Input Numbers">
+        <button onclick = "calc()">Calculate</button>
+        <br>
+        <br>
+        <div id="result"></div>
         <script src="js/app.js"></script>
     </body>
 </html>
