--- a/Labs/Events/Color Changer/base.html
+++ b/Labs/Events/Color Changer/base.html
@@ -1,7 +1,33 @@
 <html>
-    <head></head>
+    <head>
+        <style>
+            #box1{
+                display: inline-block;
+                width: 300px;
+                height: 300px;
+                background-color: gray;
+                margin-right: 5px;
+            }
+            #box2{
+                display: inline-block;
+                width: 300px;
+                height: 300px;
+                background-color: gray;
+                margin-right: 5px;
+            }
+            #box3{
+                display: inline-block;
+                width: 300px;
+                height: 300px;
+                background-color: gray;
+                margin-right: 5px;
+            }
+                </style>
+    </head>
     <body>
-
+        <div id="box3"></div>
+        <div id="box2"></div>
+        <div id="box1"></div>
         <script src="js/app.js"></script>
     </body>
 </html>
