--- a/Labs/Events/FlashCards/base.html
+++ b/Labs/Events/FlashCards/base.html
@@ -1,7 +1,21 @@
 <html>
-    <head></head>
+    <head>
+        <style>
+            #q1,#q2,#q3{
+                width: 200px;
+                height: 200px;
+                font-size: 20px;
+                display: inline-block;
+            }
+    
+        </style>
+    </head>
     <body>
-
+        <h2>Car Flash Cards</h2>
+        <button answer="Bugatti Chiron Supersport 300+"  id="q1">What is the fastest car in the world?</button>
+        <button answer="Rolls-Royce Boat Tail at $28,000,000 " id="q2">Whats the  most expensive car?</button>
+        <button answer="White"  id="q3">Whats the most common car color?</button>
+        <div id="text">The Answer is:</div>
         <script src="js/app.js"></script>
     </body>
 </html>
