--- a/index.html
+++ b/index.html
@@ -97,5 +97,8 @@
         
         <a href="Labs/Events/FlashCards/base.html"><h2>Flash Cards</h2></a>
         
+        <h2>Final</h2>
+
+        <a href="Labs/Final/base.html"><h2>Final</h2></a>
     </body>
 </html>
